Fixed bug #49560 (oci8: using LOBs causes slow PHP shutdown)  - Improved descriptor refcounting to remove unneeded items sooner  - Replaced n^2 list traversal during descriptor list destruction